@@ -1379,14 +1379,17 @@ abstract class CMSModule
             $name = preg_replace('/[^A-Za-z0-9\-_+]/', '', $name);
 
             $filename = $this->GetModulePath().'/action.' . $name . '.php';
-            if (@is_file($filename)) {
-                // these are included in scope in the included file for convenience.
-                $gCms = CmsApp::get_instance();
-                $db = $gCms->GetDb();
-                $config = $gCms->GetConfig();
-                $smarty = ( $this->_action_tpl ) ? $this->_action_tpl : $smarty = $gCms->GetSmarty()->get_template_parent();
-                include($filename);
+            if( !is_file($filename) ) {
+                @trigger_error("$name is an unknown acton of module ".$this->GetName());
+                throw new \CmsError404Exception("Module action not found");
             }
+
+            // these are included in scope in the included file for convenience.
+            $gCms = CmsApp::get_instance();
+            $db = $gCms->GetDb();
+            $config = $gCms->GetConfig();
+            $smarty = ( $this->_action_tpl ) ? $this->_action_tpl : $smarty = $gCms->GetSmarty()->get_template_parent();
+            include($filename);
         }
     }
 
